DEV-1: Add all prs

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "name": "David Dan"
         },
 	{
-	    "name: "Kirill Kholodilin"
+	    "name": "Kirill Kholodilin"
 	}
     ],
     "require": {
