--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "sensio/generator-bundle": "~3.0",
-        "friendsofsymfony/rest-bundle": "~2.0",
-        "jms/serializer-bundle": "~1.1",
-        "nelmio/cors-bundle": "~1.4 "
+        "sensio/generator-bundle": "^3.0",
+        "friendsofsymfony/rest-bundle": "^2.2",
+        "jms/serializer-bundle": "^2.0",
+        "nelmio/cors-bundle": "~1.4"
     },
     "autoload": {
         "psr-0": {
